--- a/web/web-all/src/main/resources/templates/item/index.html
+++ b/web/web-all/src/main/resources/templates/item/index.html
@@ -1019,7 +1019,7 @@
 
         methods: {
             init() {
-                debugger
+                //debugger
                 this.spuSaleAttrList.forEach((spuSaleAttr, index) => {
                     spuSaleAttr.index = index
                     spuSaleAttr.spuSaleAttrValueList.forEach((spuSaleAttrValue) => {
@@ -1040,7 +1040,7 @@
             },
 
             spuSaleAttrFun(index, spuSaleAttrValueId) {
-                debugger
+                //debugger
                 this.isAddCart = true
                 var valuesSkuJson = JSON.parse(this.valuesSkuJson);
 
