--- a/web/web-all/src/main/resources/templates/common/header.html
+++ b/web/web-all/src/main/resources/templates/common/header.html
@@ -117,7 +117,7 @@
                 },
 
                 login() {
-                    window.location.href = 'http://passport.gmall.com/login.html?originUrl='+window.location.href
+                    window.location.href = 'http://passport.gmall.com/login.html?originUrl='+encodeURIComponent(window.location.href);
                 },
 
                 logout() {
